# chunked-flow

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  task_definition.json
.github/workflows/: aws.yml  lint-test.yml
src/chunk/application/services/: feed.py
src/chunk/domain/facility/: payload.py  processor.py  storage.py
src/chunk/infra/: payload.py  processor.py  storage.py
src/chunk/main/: config.py  constants.py  main.py  settings.py
src/chunk/presentation/: service.py
tests/: chunk_payload_test.py  feed_service_test.py  processor_test.py
