[project]
name = "chunked-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.1.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "faker>=37.0.2",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "W", "I", "N", "UP", "A", "C4", "PIE", "S", "TC", "T20", "SIM", "PTH", "PLR"]
lint.ignore = ["S101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Same as Black.
line-length = 120
indent-width = 4


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
